--- a/vue_client/src/assets/main.css
+++ b/vue_client/src/assets/main.css
@@ -1,10 +1,11 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
+  height: 100%;
+  width: 100%;
 }
 
 a,
@@ -28,8 +29,6 @@ a,
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+    padding: 0;
   }
 }
